[package]
name = "idm-tools"
version = "0.1.0"
edition = "2021"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Implicit Data Markup utilities"
homepage = "https://github.com/rsaarelm/idm-tools"
repository = "https://github.com/rsaarelm/idm-tools"
license = "MIT/Apache-2.0"
resolver = "2"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "1", features = ["deref", "deref_mut"] }
idm = "0.4"
indexmap = { version = "2", features = ["serde"] }
lazy-regex = "3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
